fix scrollbar issue

--- a/openmetadata-ui/src/main/resources/ui/src/components/Explore/EntitySummaryPanel/entity-summary-panel.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Explore/EntitySummaryPanel/entity-summary-panel.less
@@ -49,7 +49,7 @@
   }
 
   .content-area {
-    max-height: calc(100vh - 180px);
+    max-height: calc(100vh - 120px);
     overflow-y: auto;
     flex: 1;
     overflow-x: hidden;
