--- a/openmetadata-ui/src/main/resources/ui/src/components/ExploreV1/exploreV1.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/ExploreV1/exploreV1.less
@@ -70,7 +70,8 @@
 
   .explore-main-container {
     height: 100%;
-    overflow-y: hidden;
+    overflow-y: auto;
+    scrollbar-width: none;
     overflow-x: hidden;
   }
 
